--- a/public/index.html
+++ b/public/index.html
@@ -619,7 +619,7 @@
       <nav>
         <a href="#quem-nos-somos">Sobre-nos</a>
         <a href="#saibamais">Saiba mais</a>
-        <a href="register.html">Registrar-se</a>
+        <a href="register">Registrar-se</a>
         <a href="login.html">Login</a>
       </nav>
     </div>
